# know-today

./: .gitignore  README.md  VISION.md  pyproject.toml  requirements.txt  subscriptions.example.json  subscriptions.json
docs/: index.html
docs/briefings/: 2026-07-17.html  2026-07-22T10-00-58Z.html  2026-07-22T10-15-40Z.html  2026-07-22T10-25-44Z.html  2026-07-24T06-11-16Z.html  index.html
prompts/: extract_youtube_learnings.md  render_youtube_briefing.md
scripts/: fetch_youtube_transcript.py  generate_youtube_briefing.py  run_daily_briefing.sh
