[project]
name = "know-today"
version = "0.1.0"
description = "AI-curated, scan-friendly daily learning briefings."
requires-python = ">=3.9"
dependencies = [
  "youtube-transcript-api>=1.2.0",
  "requests[socks]>=2.31.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
